Removed deprecated /internal routes
